--- a/src/style.scss
+++ b/src/style.scss
@@ -533,7 +533,7 @@ body, .container, .formContainer, .sidebar, .chat {
       .img-preview {
         position: fixed;
         bottom: 80px;
-        left: 250px; /* Center horizontally */
+        left: 250px; 
         transform: translate(-50%, 0); /* Adjust vertical position */
         width: 60%; /* Adjust the width to control the size */
         max-width: 600px; /* Set a maximum width */
