--- a/src/style.scss
+++ b/src/style.scss
@@ -534,7 +534,7 @@ body, .container, .formContainer, .sidebar, .chat {
         position: fixed;
         bottom: 80px;
         left: 250px; 
-        transform: translate(-50%, 0); /* Adjust vertical position */
+        transform: translate(-50%, 0); 
         width: 60%; /* Adjust the width to control the size */
         max-width: 600px; /* Set a maximum width */
         max-height: 80vh; /* Limit the height to 80% of the viewport height */
